Java land test changes.